# rye-pre-commit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
src/rye_pre_commit/: __init__.py  __main__.py
